<!--
     Copyright (C) 2017 Angel Garcia

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Stock Tracker</string>
    <!--
         By convention, "action" denotes that this String will be used as the label for an Action,
         typically from the action bar.  The ActionBar is limited real estate, so shorter is better.
    -->
    <string name="action_add">Add</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="symbol">Stock</string>
    <string name="price">Price</string>
    <string name="change">Change</string>
    <string name="pref_stocks_key">stocks</string>
    <string name="chart_no_data">No data</string>
    <string name="pref_display_mode_title">Display Mode</string>
    <string name="dialog_title">Add Stock</string>
    <string name="dialog_hint">Symbol (e.g. GOOG)</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_add">Add</string>

    <string name="error_stock_not_found">Symbol (<xliff:g id="symbol">%s</xliff:g>) is invalid!"</string>
    <string name="error_no_network">No network connectivity! Will load stock cursor when the network is available.</string>
    <string name="error_no_stocks">No stocks added! Hit the floating action button to add one.</string>
    <string name="error_fetching">Error fetching stock quotes.</string>
    <string name="error_unknown_uri">Unknown URI: </string>
    <string name="error_failed_insert_row">Failed to insert row into URI: </string>

    <string name="empty_stock_list">No Stock Information Available</string>
    <string name="toast_stock_added_no_connectivity">Symbol (<xliff:g id="symbol">%s</xliff:g>) added. Will refresh when network available.</string>
    <string name="toast_no_connectivity">Will refresh when network available.</string>
    <string name="title_widget_list">StockTracker List</string>


    <!-- Non translatables -->
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="pref_stocks_initialized_key" translatable="false">initialized</string>
    <string name="pref_display_mode_key" translatable="false">displayMode</string>
    <string name="pref_display_mode_default" translatable="false">@string/pref_display_mode_percentage_key</string>
    <string name="pref_display_mode_absolute_key" translatable="false">absolute</string>
    <string name="pref_display_mode_percentage_key" translatable="false">percentage</string>
    <string name="default_stocks_voo" translatable="false">VOO</string>
    <string name="default_stocks_vti" translatable="false">VTI</string>
    <string name="default_stocks_apple" translatable="false">AAPL</string>
    <string name="default_stocks_microsoft" translatable="false">MSFT</string>
    <string name="default_stocks_google" translatable="false">GOOGL</string>
    <string name="action_change_units" translatable="false">@string/pref_display_mode_key</string>
    <string name="dialog_class_name" translatable="false">StockDialogFragment</string>
    <string name="prefix_dollar" translatable="false">+$</string>
    <string name="prefix_positive" translatable="false">+</string>
    <string name="symbol_comma" translatable="false">, </string>
    <string name="symbol_new_line" translatable="false">\n</string>
    <string name="msg_intent_handled" translatable="false">Intent handled</string>
    <string name="msg_panic" translatable="false">WHYAREWEHERE</string>
    <string name="msg_runnig_sync_job" translatable="false">Running sync job</string>
    <string name="msg_scheduling_periodic_task" translatable="false">Scheduling a periodic task</string>
    <string name="msg_symbol_clicked" translatable="false">Symbol clicked: (<xliff:g id="symbol">%s</xliff:g>)</string>



    <!-- Strings related to Settings -->
    <string name="pref_key_percentage_units" translatable="false">Percentage_units</string>
    <string name="pref_key_sync_frequency" translatable="false">sync_frequency</string>
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_percentage_units">Percentage units</string>
    <string name="pref_description_percentage_units">Use percentages in stock quotes</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>3 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
    </string-array>
    <!-- Values in milliseconds -->
    <string-array name="pref_sync_frequency_values">
        <item>180000</item>
        <item>300000</item>
        <item>600000</item>
        <item>900000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>10800000</item>
    </string-array>

</resources>
