<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_header_general"
        android:key="pref_key_storage_settings_general"
        android:icon="@drawable/ic_info_black_24dp">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_percentage_units"
            android:summary="@string/pref_description_percentage_units"
            android:title="@string/pref_title_percentage_units" />

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/pref_header_data_sync"
        android:key="pref_key_storage_settings_data_sync"
        android:icon="@drawable/ic_sync_black_24dp">

        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <ListPreference
            android:defaultValue="300000"
            android:entries="@array/pref_sync_frequency_titles"
            android:entryValues="@array/pref_sync_frequency_values"
            android:key="@string/pref_key_sync_frequency"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_sync_frequency" />

    </PreferenceCategory>
</PreferenceScreen>
